--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,31 +6,54 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    
+
     <TextView
         android:id="@+id/rxText"
+        android:visibility="invisible"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="300dp"
         android:layout_marginTop="200dp"
+        android:scrollbars="vertical"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn1"
+        android:text="enviar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="150dp"/>
+        android:layout_marginTop="540dp"
+        android:layout_marginLeft="270dp"/>
+
+    <Button
+        android:id="@+id/leerBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="540dp"
+        android:text="leer"
+        android:layout_marginLeft="170dp"/>
 
     <EditText
         android:id="@+id/txText"
-        android:layout_width="wrap_content"
+        android:layout_marginTop="490dp"
+        android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="" />
+
+    <TextView
+        android:id="@+id/usertext"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Ayuda.."
+        android:textColor="#FF4848"
+        android:textSize="24sp" />
 
 </RelativeLayout>
